--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -1,14 +1,91 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E183b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4bc-F0-qoP">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--To Do View Controller-->
+        <scene sceneID="4TH-cS-G8Z">
+            <objects>
+                <tableViewController id="WAu-s5-Ha9" customClass="ToDoViewController" customModule="TodoList" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="72" sectionHeaderHeight="28" sectionFooterHeight="28" id="aKb-5U-1X7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="todoCell" rowHeight="72" id="kTF-SJ-vdy" customClass="ToDoViewCell" customModule="TodoList" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="72"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kTF-SJ-vdy" id="Cew-fF-84u">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="72"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awesome Stuffs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7M-eD-CNM">
+                                            <rect key="frame" x="8" y="0.0" width="124" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/12/2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0E-SA-XN5">
+                                            <rect key="frame" x="282" y="0.0" width="85" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JgL-Y5-Sr5">
+                                            <rect key="frame" x="8" y="25" width="359" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="H7M-eD-CNM" firstAttribute="top" secondItem="Cew-fF-84u" secondAttribute="top" id="6LE-dd-vef"/>
+                                        <constraint firstItem="H7M-eD-CNM" firstAttribute="leading" secondItem="Cew-fF-84u" secondAttribute="leading" constant="8" id="F5e-2Q-rzs"/>
+                                        <constraint firstAttribute="trailing" secondItem="m0E-SA-XN5" secondAttribute="trailing" constant="8" id="QvB-VC-BgK"/>
+                                        <constraint firstItem="JgL-Y5-Sr5" firstAttribute="leading" secondItem="Cew-fF-84u" secondAttribute="leading" constant="8" id="Tbs-W8-Gek"/>
+                                        <constraint firstItem="JgL-Y5-Sr5" firstAttribute="top" secondItem="m0E-SA-XN5" secondAttribute="bottom" constant="4" id="cWX-aw-ItM"/>
+                                        <constraint firstItem="m0E-SA-XN5" firstAttribute="top" secondItem="Cew-fF-84u" secondAttribute="top" id="hHx-yh-1ai"/>
+                                        <constraint firstAttribute="trailing" secondItem="JgL-Y5-Sr5" secondAttribute="trailing" constant="8" id="kek-EO-Z6n"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="m0E-SA-XN5" id="pcd-N2-yDo"/>
+                                    <outlet property="descLabel" destination="JgL-Y5-Sr5" id="g5g-cw-3K4"/>
+                                    <outlet property="titleLabel" destination="H7M-eD-CNM" id="ygD-aM-ODX"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="WAu-s5-Ha9" id="YEk-kQ-vXO"/>
+                            <outlet property="delegate" destination="WAu-s5-Ha9" id="5UF-SF-hwx"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="lf5-oe-hz6">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="JXI-9a-6ds">
+                            <connections>
+                                <action selector="addButtonPressed:" destination="WAu-s5-Ha9" id="KhE-Dq-kRG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="addTodoItem" id="W2R-ae-Nt8"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="88a-k2-MJA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1733.5999999999999" y="138.98050974512745"/>
+        </scene>
+        <!--Add Item View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AddItemViewController" customModule="TodoList" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +93,98 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sCQ-Ad-REN">
+                                <rect key="frame" x="24" y="28" width="327" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Description" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="u7M-cN-ucU">
+                                <rect key="frame" x="32" y="66" width="311" height="19"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="UCC-hi-PJf">
+                                <rect key="frame" x="0.0" y="93" width="375" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="511741429.85738403">
+                                    <!--2017-03-20 22:23:49 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ruk-gy-tje">
+                                <rect key="frame" x="24" y="317" width="327" height="60"/>
+                                <color key="backgroundColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="Add Item">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="addItemButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bwb-V2-lfe"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ucw-h8-Wgj">
+                                <rect key="frame" x="24" y="396" width="327" height="60"/>
+                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jbw-6t-H16"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ruk-gy-tje" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="4sy-Mc-3Ee"/>
+                            <constraint firstItem="u7M-cN-ucU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="16" id="4uf-1r-1M6"/>
+                            <constraint firstItem="UCC-hi-PJf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5BE-Si-6Am"/>
+                            <constraint firstItem="sCQ-Ad-REN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8he-dD-P0A"/>
+                            <constraint firstItem="Ruk-gy-tje" firstAttribute="top" secondItem="UCC-hi-PJf" secondAttribute="bottom" constant="8" id="Alx-h4-r5k"/>
+                            <constraint firstItem="Ucw-h8-Wgj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BAc-Hc-uNO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sCQ-Ad-REN" secondAttribute="trailing" constant="8" id="Bi5-cn-x0z"/>
+                            <constraint firstAttribute="trailing" secondItem="UCC-hi-PJf" secondAttribute="trailing" id="Byw-JE-esl"/>
+                            <constraint firstItem="UCC-hi-PJf" firstAttribute="top" secondItem="u7M-cN-ucU" secondAttribute="bottom" constant="8" id="DTS-U2-716"/>
+                            <constraint firstItem="u7M-cN-ucU" firstAttribute="top" secondItem="sCQ-Ad-REN" secondAttribute="bottom" constant="8" id="LOZ-r9-sPU"/>
+                            <constraint firstItem="UCC-hi-PJf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NZX-yM-hkx"/>
+                            <constraint firstItem="u7M-cN-ucU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ST1-v9-JUH"/>
+                            <constraint firstItem="sCQ-Ad-REN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="UyG-gh-tgt"/>
+                            <constraint firstItem="Ucw-h8-Wgj" firstAttribute="leading" secondItem="Ruk-gy-tje" secondAttribute="leading" id="ZCG-mg-piS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ruk-gy-tje" secondAttribute="trailing" constant="8" id="Zjt-EC-faV"/>
+                            <constraint firstItem="sCQ-Ad-REN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="hfp-ni-A4H"/>
+                            <constraint firstItem="Ruk-gy-tje" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rkc-7r-Gpj"/>
+                            <constraint firstItem="Ucw-h8-Wgj" firstAttribute="top" secondItem="Ruk-gy-tje" secondAttribute="bottom" constant="19" id="x1t-xf-YDE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="u7M-cN-ucU" secondAttribute="trailing" constant="16" id="z4Z-7h-BKY"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="desc" destination="u7M-cN-ucU" id="0Vy-uk-u1k"/>
+                        <outlet property="toDoTitle" destination="sCQ-Ad-REN" id="0Vp-qC-a7v"/>
+                        <outlet property="todoDate" destination="UCC-hi-PJf" id="WVU-qA-C09"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2540" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rkG-Oe-KWI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4bc-F0-qoP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JA2-ai-HRt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WAu-s5-Ha9" kind="relationship" relationship="rootViewController" id="xQT-wh-mZQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dKL-PX-Qb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="873" y="139"/>
         </scene>
     </scenes>
 </document>
